# IS213-travellust

./: README.md
my-monorepo/: .gitignore  docker-compose.yml  flight-management-endpoints.md  hotel-endpoints.md  package-lock.json  package.json
my-monorepo/apps/attractions/: .dockerignore  .env.example  Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/attractions/attractions/: __init__.py  app.py  repository.py  supabase_client.py  trips_client.py
my-monorepo/apps/attractions/tests/: __init__.py  conftest.py  test_app.py
my-monorepo/apps/book-attractions/: .env.example  Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/book-attractions/book_attractions/: __init__.py  app.py  clients.py
my-monorepo/apps/book-attractions/tests/: __init__.py  conftest.py  test_app.py
my-monorepo/apps/book-flight/: Dockerfile  main.py  pyproject.toml
my-monorepo/apps/book-flight/src/: app.py  config.py
my-monorepo/apps/book-flight/src/clients/: booked_tickets_client.py  flights_client.py  trips_client.py
my-monorepo/apps/book-hotels/: .env.example  Dockerfile  README.md  pyproject.toml
my-monorepo/apps/book-hotels/book_hotels/: __init__.py  book_hotels_app.py  book_hotels_service.py  hello.py
my-monorepo/apps/book-hotels/tests/: __init__.py  conftest.py  test_hello.py
my-monorepo/apps/booked_tickets/: Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/booked_tickets/booked_tickets/: hello.py  repository.py  supabase_client.py
my-monorepo/apps/booked_tickets/tests/: test_hello.py
my-monorepo/apps/collaboration_service/: Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/collaboration_service/collaboration_service/: app.py  redis_client.py
my-monorepo/apps/collaboration_service/tests/: test_hello.py
my-monorepo/apps/flight-management/: Dockerfile  main.py  pyproject.toml
my-monorepo/apps/flight-management/src/: app.py  config.py
my-monorepo/apps/flight-management/src/clients/: saved_flights_client.py  search_wrapper_client.py
my-monorepo/apps/flight-management/src/routes/: flights.py  health.py
my-monorepo/apps/flight-management/src/services/: flight_booking_service.py  flight_delete_service.py  flight_get_service.py  flight_save_service.py  flight_search_service.py  flight_update_service.py
my-monorepo/apps/flight-management/src/utils/: api_errors.py
my-monorepo/apps/flight-search-wrapper/: Dockerfile  main.py  pyproject.toml  test_flightapi.py  test_flightapi_direct.py
my-monorepo/apps/flight-search-wrapper/src/: app.py  config.py  flightapi_client.py  models.py  serpapi_client.py
my-monorepo/apps/flight-search-wrapper/src/routes/: flights.py  health.py
my-monorepo/apps/flight-search-wrapper/src/services/: flight_search_service.py
my-monorepo/apps/flight-search-wrapper/src/utils/: api_errors.py  validators.py
my-monorepo/apps/hotel-management/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  docker-start.sh  project.json  pyproject.toml
my-monorepo/apps/hotel-management/hotel-management/: .env.example  Dockerfile  README.md  pyproject.toml
my-monorepo/apps/hotel-management/hotel_management/: __init__.py  example_hotel_management.py  example_saved_hotels.py  hello.py  hotel_management_app.py  hotel_management_service.py  hotel_search_wrapper.py  hotel_search_wrapper_app.py  saved_hotels.py  saved_hotels_app.py  tempCodeRunnerFile.py
my-monorepo/apps/hotel-management/tests/: test_hello.py
my-monorepo/apps/hotel-search-wrapper/: .env.example  Dockerfile  README.md  pyproject.toml
my-monorepo/apps/hotel-search-wrapper/src/: __init__.py  hotel_search_wrapper.py  hotel_search_wrapper_app.py
my-monorepo/apps/notifications/: Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/notifications/notifications/: app.py  consumer.py  hello.py
my-monorepo/apps/notifications/scripts/: publish_test_messages.py
my-monorepo/apps/notifications/tests/: test_consumer.py  test_hello.py
my-monorepo/apps/plan_service/: Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/plan_service/tests/: test_hello.py
my-monorepo/apps/saved-flights/: Dockerfile  flights.db  main.py  migration_add_flight_details.sql  pyproject.toml  requirements.txt  supabase_setup.sql
my-monorepo/apps/saved-flights/src/: app.py  config.py  database.py  logging_config.py  models.py  supabase_client.py
my-monorepo/apps/saved-flights/src/routes/: flights.py
my-monorepo/apps/saved-flights/src/services/: flight_service.py
my-monorepo/apps/saved-flights/src/utils/: api_errors.py  redis_publisher.py  validators.py
my-monorepo/apps/saved-hotels/: .env.example  Dockerfile  README.md  pyproject.toml
my-monorepo/apps/saved-hotels/src/: __init__.py  saved_hotels.py  saved_hotels_app.py  supabase_client.py
my-monorepo/apps/service-a/src/: notes.txt
my-monorepo/apps/trips_atomic/: Dockerfile  README.md  project.json  pyproject.toml
my-monorepo/apps/trips_atomic/tests/: test_hello.py
my-monorepo/apps/trips_atomic/trips_atomic/: hello.py
my-monorepo/frontend/: .env.local  frontendSummary.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
my-monorepo/frontend/src/: App.tsx  index.css
my-monorepo/frontend/src/api/: attraction.ts  booking.ts  flight.ts  hotel.ts  trip.ts
my-monorepo/frontend/src/components/: ActivityLog.tsx  BudgetBar.tsx  CollaboratorAvatars.tsx  DetailPane.tsx  DisruptionBanner.tsx  FlightSearchPanel.tsx  HotelSearchPanel.tsx  LedgerPane.tsx  TimelineNode.tsx  TripCard.tsx  TripCommandCenter.tsx
my-monorepo/frontend/src/contexts/: BookingsContext.tsx  ThemeContext.tsx
my-monorepo/frontend/src/data/: attractionData.ts  flightData.ts  hotelData.ts  mockData.ts
my-monorepo/frontend/src/hooks/: useCollaborationSocket.ts
my-monorepo/frontend/src/pages/: BookedTickets.tsx  Booking.tsx  Index.tsx  ItemDetail.tsx  Landing.tsx  Profile.tsx  SearchResults.tsx
my-monorepo/frontend/src/services/: tripsApi.ts
my-monorepo/frontend/src/types/: trip.ts
(+31 files in other folders)
