[tool.coverage.run]
branch = true
source = [ "book_attractions" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/book-attractions/html'
 --cov-report xml:'../../coverage/apps/book-attractions/coverage.xml'
 --html='../../reports/apps/book-attractions/unittests/html/index.html'
 --junitxml='../../reports/apps/book-attractions/unittests/junit.xml'
"""

[project]
name = "book_attractions"
version = "1.0.0"
description = "Composite service for booking attractions."
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["book_attractions"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
