[project]
name = "saved-flights"
version = "0.1.0"
description = "My atomic microservice to save flights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "redis>=7.3.0",
    "requests==2.31.0",
    "supabase>=2.11.0",
]
