[tool.coverage.run]
branch = true
source = [ "saved_hotels" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
--cov
--cov-report html:'../../coverage/apps/saved-hotels/html'
--cov-report xml:'../../coverage/apps/saved-hotels/coverage.xml'
--html='../../reports/apps/saved-hotels/unittests/html/index.html'
--junitxml='../../reports/apps/saved-hotels/unittests/junit.xml'
"""

[project]
name = "saved-hotels"
version = "1.0.0"
description = "Saved Hotels Atomic Microservice - Supabase hotel storage"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
    "flask>=3.1.3",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
